log
xdpmon.c:124:22: error: ‘struct stats_record’ declared inside parameter list will not be visible outside of this definition or declaration [-Werror]
  124 | stats_collect(struct stats_record *rec)
      |                      ^~~~~~~~~~~~
xdpmon.c:124:1: error: return type defaults to ‘int’ [-Werror=implicit-int]
  124 | stats_collect(struct stats_record *rec)
      | ^~~~~~~~~~~~~
xdpmon.c: In function ‘stats_collect’:
xdpmon.c:128:2: error: too few arguments to function ‘bpf_map_lookup_elem’
  128 |  bpf_map_lookup_elem()
      |  ^~~~~~~~~~~~~~~~~~~
In file included from xdpmon.c:18:
../lib/libbpf/src/root/usr/include/bpf/bpf.h:239:16: note: declared here
  239 | LIBBPF_API int bpf_map_lookup_elem(int fd, const void *key, void *value);
      |                ^~~~~~~~~~~~~~~~~~~
xdpmon.c:128:23: error: expected ‘;’ before ‘}’ token
  128 |  bpf_map_lookup_elem()
      |                       ^
      |                       ;
  129 | 
  130 | }
      | ~                      
xdpmon.c:126:8: error: unused variable ‘key’ [-Werror=unused-variable]
  126 |  __u32 key = IPV4;
      |        ^~~
xdpmon.c:124:36: error: unused parameter ‘rec’ [-Werror=unused-parameter]
  124 | stats_collect(struct stats_record *rec)
      |               ~~~~~~~~~~~~~~~~~~~~~^~~
xdpmon.c: At top level:
xdpmon.c:132:20: error: expected ‘{’ before ‘*’ token
  132 | stats_print(struct *)
      |                    ^
xdpmon.c:132:1: error: return type defaults to ‘int’ [-Werror=implicit-int]
  132 | stats_print(struct *)
      | ^~~~~~~~~~~
xdpmon.c: In function ‘stats_print’:
xdpmon.c:132:13: error: parameter name omitted
  132 | stats_print(struct *)
      |             ^~~~~~~~
xdpmon.c: In function ‘stats_poll’:
xdpmon.c:143:3: error: too few arguments to function ‘stats_collect’
  143 |   stats_collect();
      |   ^~~~~~~~~~~~~
xdpmon.c:124:1: note: declared here
  124 | stats_collect(struct stats_record *rec)
      | ^~~~~~~~~~~~~
xdpmon.c:144:3: error: too few arguments to function ‘stats_print’
  144 |   stats_print();
      |   ^~~~~~~~~~~
xdpmon.c:132:1: note: declared here
  132 | stats_print(struct *)
      | ^~~~~~~~~~~
xdpmon.c:138:21: error: unused parameter ‘bpf_map_fd’ [-Werror=unused-parameter]
  138 | void stats_poll(int bpf_map_fd, int interval)
      |                 ~~~~^~~~~~~~~~
xdpmon.c:138:37: error: unused parameter ‘interval’ [-Werror=unused-parameter]
  138 | void stats_poll(int bpf_map_fd, int interval)
      |                                 ~~~~^~~~~~~~
xdpmon.c: In function ‘main’:
xdpmon.c:163:8: error: assignment to ‘struct xdp_program *’ from incompatible pointer type ‘struct xdp_program **’ [-Werror=incompatible-pointer-types]
  163 |  xprog = user_xdp_attach(&cfg);
      |        ^
xdpmon.c:180:18: error: passing argument 1 of ‘user_xdp_detach’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  180 |  user_xdp_detach(&cfg);
      |                  ^~~~
      |                  |
      |                  struct xdp_config *
xdpmon.c:116:42: note: expected ‘struct xdp_program **’ but argument is of type ‘struct xdp_config *’
  116 | int user_xdp_detach(struct xdp_program **progs, struct xdp_config *cfg) {
      |                     ~~~~~~~~~~~~~~~~~~~~~^~~~~
xdpmon.c:180:2: error: too few arguments to function ‘user_xdp_detach’
  180 |  user_xdp_detach(&cfg);
      |  ^~~~~~~~~~~~~~~
xdpmon.c:116:5: note: declared here
  116 | int user_xdp_detach(struct xdp_program **progs, struct xdp_config *cfg) {
      |     ^~~~~~~~~~~~~~~
xdpmon.c: In function ‘user_xdp_detach’:
xdpmon.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
  120 | }
      | ^
xdpmon.c: In function ‘stats_collect’:
xdpmon.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
  130 | }
      | ^
xdpmon.c: In function ‘stats_print’:
xdpmon.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
make: *** [../lib/common.mk:104: xdpmon] Error 1
